# cemc-product-kit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
cemc_product_kit/: __init__.py  _version.py  utils.py
cemc_product_kit/operator/: __init__.py
cemc_product_kit/systems/cma_gfs/grib2_abroad/: README.md  __main__.py  common.py  task_dask_v1.py  task_serial.py
cemc_product_kit/systems/cma_gfs/grib2_ne/: README.md  __main__.py  common.py  task_dask_v1.py  task_dask_v2.py  task_serial.py
cemc_product_kit/systems/cma_gfs/grib2_nsmc/: README.md  __main__.py  common.py  task_dask_v1.py  task_serial.py
cemc_product_kit/systems/cma_meso/grib2_split/: __main__.py  common.py  config.py  task_dask_v1.py  task_serial.py
