[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cemc-product-kit"
authors = [
    {name = "perillaroc", email = "perillaroc@gmail.com"},
]
description = "NWP production kit for CEMC/CMA"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cemc", "data"]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    'License :: OSI Approved :: Apache Software License',

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml",
    "jinja2",
    "numpy",
    "pandas",
    "xarray",
    "eccodes",
    "dask",
    "click",
    "tqdm",
    "loguru",
    "typer",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/cemc-oper/cemc-product-kit"
Repository = "https://github.com/cemc-oper/cemc-product-kit.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["cemc_product_kit"]

[tool.setuptools_scm]
version_file = "cemc_product_kit/_version.py"